--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "scss": "sass src/scss:dist/css -w"
+    "scss": "sass src/scss:dist/css -w",
+    "git": "git log --oneline --graph"
   },
   "repository": {
     "type": "git",
