feat: 新增現代電商風格購物網站的基本頁面與樣式

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "scss": "sass scss:css -w"
+    "scss": "sass src/scss:dist/css -w"
   },
   "repository": {
     "type": "git",
